feat: implement album
